--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: poppins, sans-serif;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none;
 }
 #container {
     display: flex;
@@ -9,8 +13,16 @@
     height: 100vh;
 }
 #left_panel {
+    flex-direction: column;
+    justify-items: center;
     flex-grow: 1;
     background-color: lightblue;
+}
+#left_panel H1 {
+    font-weight: normal;
+    font-size: 2.5vw;
+    text-align: center;
+    white-space: nowrap;
 }
 #drag {
     width: 5px;
@@ -20,4 +32,49 @@
 #right_panel {
     width: 200px;
     background-color: lightcoral;
+}
+.separator{
+    width: 95%;
+    height: 2px;
+    background-color: #acacac;
+}
+#newFile{
+    cursor: pointer;
+}
+.item{
+    font-size: 1.3vw;
+    display: flex;
+    width: 98%;
+    height: 8%;
+    background-color: transparent;
+    border-radius: 12px;
+    margin: 2px;
+    padding-left: 5%;
+    transition: 70ms ease;
+    align-items: center;
+    font-weight: bold;
+    letter-spacing: .13rem;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none;
+}
+.item:hover{
+    background-color: lightcoral;
+    opacity: 0.7;
+}
+.item:active{
+    background-color: #fff;
+}
+ul {
+    position: relative;
+    overflow-y: auto;
+    padding: 10px;
+    list-style: none;
+    background-color: #fff;
+    width: 100%;
+    height:  87%;
+
+    scrollbar-width: thin;
+    scrollbar-color: transparent transparent;
+    transition: scrollbar-color 0.3s ease-in-out;
 }
