--- a/style.css
+++ b/style.css
@@ -73,8 +73,6 @@ ul {
     background-color: #fff;
     width: 100%;
     height:  87%;
-
     scrollbar-width: thin;
-    scrollbar-color: transparent transparent;
-    transition: scrollbar-color 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
 }
